--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Катя, ты будешь моим воздухом?</h1>
+        <h1>Карина, ты будешь моей venom на 14 февраля?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Да</button>
             <button class="no-button" onclick="handleNoClick()">Нет</button>
